--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-uuid": "^2.0.2",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "expo-notifications": "~0.28.9",
+    "expo-device": "~6.0.2",
+    "expo-dev-client": "~4.0.18"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
