--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -21,10 +21,12 @@
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.14",
     "expo-constants": "~16.0.2",
+    "expo-device": "~6.0.2",
     "expo-font": "~12.0.7",
     "expo-image-picker": "~15.0.5",
     "expo-linking": "~6.3.1",
     "expo-media-library": "~16.0.3",
+    "expo-notifications": "~0.28.9",
     "expo-router": "~3.5.16",
     "expo-secure-store": "^13.0.1",
     "expo-splash-screen": "~0.27.5",
@@ -39,10 +41,7 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-uuid": "^2.0.2",
-    "react-native-web": "~0.19.10",
-    "expo-notifications": "~0.28.9",
-    "expo-device": "~6.0.2",
-    "expo-dev-client": "~4.0.18"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
